--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
       </div>
     </div>
     <div class = "center"><button id="load-quote" class="load-quote">Show another quote</button> </div>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
