Type of Source Update

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p class="source">Patrick McKenzie</p> 
           <p class="citation">Twitter</p>
           <p class="year">2016</p>
+          <p class = "typeOfSource">Man of the Internet</p>
         </p>
       </div>
     </div>
