--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quotes</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="/Users/teresarosinski/Downloads/a_random_quote_generator-v1/css/styles.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
@@ -24,7 +24,10 @@
         </p>
       </div>
     </div>
-    <div class = "center"><button id="load-quote" class="load-quote">Show another quote</button> </div>
+   
+    <img class = "photo" src = "quotesPictures/patrickMcKenzie.jpg" alt= "person who said quote" >
+    <div class = "button"><button id="load-quote" class="load-quote">Show another quote</button> </div>
     <script src="script.js"></script>
+    
   </body>
 </html>
